2014-08-15
	Performance tweaks

2014-08-14
	Added SHOWPAGE. code cleanup

2014-08-11
	Cleanup system var handling, removed os_ver

2014-08-09
	Renamed command "#UNIT-PATH:" to "UNITPATH"
	Renamed command "#INC:" to "INCLUDE"
	Fixed/implemented INCLUDE command
	Refactored comp_pass_1 function is scan.c breaking into
	smaller helper functions

2014-07-07
	Update SDL to use SDL2 and common widget

2014-06-14
	Fix crash evaluating "a \\ b"
	Fix INPUT command in FLTK for scrolled display

2014-06-11
	Android changes:
	- Run by URL/QrCode.
	- Implemented BEEP/SOUND
	- Screen layout adjusts when virtual keypad displayed

2014-04-20
	Released Windows version 0.11.5

2013-12-30
	Fix android display clip handling
	Fix android import from IDE
	Console is now a graphics screen
	Replace battery drain error with console warning

2013-12-18
	Android version 0.11.4
	Built with android NDK for huge performance increase
	Web service for remote file edit/run
	Can now launch .bas files from Android file browser
	Added program restart command

2013-02-09
	Added support for empty parentheses in sub/func calls

2012-12-18
	AT and PEN now work with WINDOW based coordinates. This will allow programs written
	for PalmOS to appear correctly on modern mobile screen resolutions.

2012-12-09
	Released 0.11.2 android version to google play
	Added the ability to change the font size

2012-12-01
	Released 0.11.1 android version to google play

2012-09-25
	MoSync port nearing completion

2012-07-29
	Fixed a bug with nested case statements

2011-04-14
	Removed POKE and BCOPY. These never really worked correcly
	and would be fairly insecure in the web model if they did.

2011-03-19
	QT port started

2011-01-22
	Fix compilation errors (fltk build) for 64bit ubuntu

2010-12-15
	Fix for floating point display (tracker 3136093) issue
	found with printing 1/1000

2010-07-31
	Fix for PAUSE cmd (tracker 1651503) to pause correct length of
	time - Case was	mostly already fixed in 0.10.7.

2010-06-19